# disciplining-minipod

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.zig  build.zig.zon  conanfile.py  flake.nix
.github/workflows/: build-disciplining-minipod.yml
debian/: changelog  control  copyright  liboscillator-disciplining-dev.install  liboscillator-disciplining3.install
include/: CMakeLists.txt  Doxyfile.in
include/oscillator-disciplining/: oscillator-disciplining.h
pkgconfig/: CMakeLists.txt  pkgconfig.pc.in
src/: CMakeLists.txt  algorithm_structs.h  checks.c  checks.h  compare_floats.h  config.c  config.h  fine_circular_buffer.c  fine_circular_buffer.h  log.h  oscillator-disciplining.c  parameters.c  parameters.h  phase.c  phase.h  utils.c  utils.h
test/: .gitignore  CMakeLists.txt  Makefile  compare_floats.h  conanfile.txt  test-checks.c  test-minipod-lib.c  test-utils.c  test_fine_circular_buffer.c  test_incomplete.conf  test_valid.conf
