set(LIBRARY_NAME ${PROJECT_NAME})

file(GLOB C_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.[ch])
file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../include/${PROJECT_NAME}/*)

set(SOURCES ${C_SOURCES} ${HEADERS})

add_library(${LIBRARY_NAME} SHARED ${SOURCES})
target_link_libraries(${LIBRARY_NAME} PRIVATE m)
set_target_properties(${LIBRARY_NAME} PROPERTIES VERSION "${VERSION_MAJOR}"
    OUTPUT_NAME ${LIBRARY_NAME})

install(TARGETS ${LIBRARY_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})

add_library(${LIBRARY_NAME}-static STATIC ${SOURCES})
set_target_properties(${LIBRARY_NAME}-static PROPERTIES
    OUTPUT_NAME ${LIBRARY_NAME})

install(TARGETS ${LIBRARY_NAME}-static DESTINATION ${CMAKE_INSTALL_LIBDIR})
